metadata/force-app/main/default/objects/Lead/fields/Lead_Consumer_Brands_Content_Hub__c.field-meta.xml
<CustomField>
    <fullName>Lead_Consumer_Brands_Content_Hub__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-3881 Created this field to track if a lead is part of the Consumer Brands Content Hub Campaign</description>
    <inlineHelpText>Lead is part of the Consumer Brands Content Hub Campaign?</inlineHelpText>
    <label>Lead - Consumer Brands Content Hub</label>
    <type>Checkbox</type>
</CustomField>