metadata/force-app/main/default/objects/Lead/fields/Lead_Created_Day__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Day__c</fullName>
    <description>The day of the week the lead was created.</description>
    <formula>CASE(
  MOD(   DATEVALUE(CreatedDate)    - DATE( 1900, 1, 7 ), 7 ),
  0, &quot;Sunday&quot;,
  1, &quot;Monday&quot;,
  2, &quot;Tuesday&quot;,
  3, &quot;Wednesday&quot;,
  4, &quot;Thursday&quot;,
  5, &quot;Friday&quot;, 
  &quot;Saturday&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The day of the week the lead was created</inlineHelpText>
    <label>Lead Created Day</label>
    <type>Text</type>
</CustomField>