metadata/force-app/main/default/objects/Lead/fields/Lead_ID_18_digits__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID_18_digits__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID (18 digits)</label>
    <type>Text</type>
</CustomField>