metadata/force-app/main/default/objects/Lead/fields/Lead_Owner_Active__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Active__c</fullName>
    <formula>If (ISBLANK(Owner:User.Username),&quot;N/A&quot;,if(Owner:User.IsActive=True,&quot;1&quot;,&quot;0&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Active</label>
    <type>Text</type>
</CustomField>