metadata/force-app/main/default/objects/Lead/fields/Lead_Owner_Change_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Change_Timestamp__c</fullName>
    <label>Timestamp Lead Owner Change</label>
    <type>DateTime</type>
</CustomField>