metadata/force-app/main/default/objects/Lead/fields/Lead_Owner_Office__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Office__c</fullName>
    <formula>TEXT(Owner:User.Work_Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Office</label>
    <type>Text</type>
</CustomField>