metadata/force-app/main/default/objects/Lead/fields/Lead_Owner_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Sales_Team__c</fullName>
    <formula>IF( Owner:User.Active_Sales__c = TRUE, Owner:User.Sales_Team__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Owner Sales Team</label>
    <type>Text</type>
</CustomField>