metadata/force-app/main/default/objects/Lead/fields/Lead_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Team__c</fullName>
    <description>Shows which BDR team the lead owner belongs to (e.g. EMEA, US/CA)</description>
    <formula>IF( Owner:User.Active_BDR__c = TRUE, TEXT(Owner:User.BDR_Team__c), &quot;&quot;)</formula>
    <label>Lead Owner BDR Team</label>
    <type>Text</type>
</CustomField>