metadata/force-app/main/default/objects/Lead/fields/Lead_Owner_Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Lead_Owner_Work_Location__c</fullName>
    <description>BODEV-341: Formula field to represent Lead Owner&apos;s Work Location so that an appropriate field update for Hours since MQL till Fist Activity will be triggered in Main Process - Lead</description>
    <formula>TEXT( Owner:User.Work_Location__c )</formula>
    <label>Lead Owner Work Location</label>
    <type>Text</type>
</CustomField>