metadata/force-app/main/default/objects/Lead/fields/Lead_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Lead_Scoring__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score based on previous conversion data to help prioritise leads. In other words: how higher the score, the better the lead.</inlineHelpText>
    <label>Lead Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>