metadata/force-app/main/default/objects/Lead/fields/Lead_Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Description__c</fullName>
    <description>webdam fields</description>
    <label>Lead Source Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>