metadata/force-app/main/default/objects/Lead/fields/Lead_Source_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detailed__c</fullName>
    <description>webdam fields</description>
    <label>Lead Source Detailed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOW Design Live 2014</fullName>
            </value>
            <value>
                <fullName>CASE List 01/08/09</fullName>
            </value>
            <value>
                <fullName>CA Schools - Mar/Comm</fullName>
            </value>
            <value>
                <fullName>Web Search - US Univ</fullName>
            </value>
            <value>
                <fullName>UPAA List</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>CoSIDA</fullName>
            </value>
            <value>
                <fullName>Jigsaw</fullName>
            </value>
            <value>
                <fullName>MDR</fullName>
            </value>
            <value>
                <fullName>UCDA 2010</fullName>
            </value>
            <value>
                <fullName>Visistat</fullName>
            </value>
            <value>
                <fullName>Love Your Brand Virtual Event</fullName>
            </value>
            <value>
                <fullName>Elance Lead Gen</fullName>
            </value>
            <value>
                <fullName>Danaher Companies</fullName>
            </value>
            <value>
                <fullName>eMotion Customers</fullName>
            </value>
            <value>
                <fullName>Tour &amp; Travel</fullName>
            </value>
            <value>
                <fullName>Pepsico Brands</fullName>
            </value>
            <value>
                <fullName>Cloud Vendors</fullName>
            </value>
            <value>
                <fullName>Dreamforce/Cloud</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other web source</fullName>
            </value>
            <value>
                <fullName>UCDA 2012 Riverside</fullName>
            </value>
            <value>
                <fullName>Brand Management in Higher Ed Webinar</fullName>
            </value>
            <value>
                <fullName>Brandworkz</fullName>
            </value>
            <value>
                <fullName>CASE V 2012</fullName>
            </value>
            <value>
                <fullName>Application - Referral Partner</fullName>
            </value>
            <value>
                <fullName>Application - Technology Partner</fullName>
            </value>
            <value>
                <fullName>Application - Reseller Partner</fullName>
            </value>
            <value>
                <fullName>Referral - Referral Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>