metadata/force-app/main/default/objects/Lead/fields/Lead_Submitter_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Submitter_s_Email__c</fullName>
    <description>BODEV-127: When Lead is coming from an external web-to-lead form for referral, User who enters the form should specify his/her email address for later analysis purpose.</description>
    <inlineHelpText>When a Lead is submitted by an external web-to-lead form for referral, email address of the person who submitted the form will be captured in this field.</inlineHelpText>
    <label>Lead Submitter&apos;s Email</label>
    <type>Email</type>
</CustomField>