metadata/force-app/main/default/objects/Lead/fields/Lead_write_up__c.field-meta.xml
<CustomField>
    <fullName>Lead_write_up__c</fullName>
    <inlineHelpText>Please provide a qualitative summary of the lead discussion. Try to bring in all possible information about the BANT or qualifying questions below.</inlineHelpText>
    <label>LEAD WRITE UP</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>