metadata/force-app/main/default/objects/Lead/fields/leadGrade6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>leadGrade6sense_Bynder__c</fullName>
    <description>A measure of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Lead Grade Bynder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>