metadata/force-app/main/default/objects/Lead/fields/leadIntentScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>leadIntentScore6sense_Bynder__c</fullName>
    <description>A measure, between 0 and 100, of how engaged a person is with your first party sales and marketing tactics compared to previous buyers. Engagement activities of a person, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Lead Intent Score Bynder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>