metadata/force-app/main/default/objects/Lead/fields/LeadIQ_Sourced__c.field-meta.xml
<CustomField>
    <fullName>LeadIQ_Sourced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this lead sourced through LeadIQ?  For assignment rules</description>
    <label>LeadIQ Sourced</label>
    <type>Checkbox</type>
</CustomField>