metadata/force-app/main/default/objects/Lead/fields/leadProfileScore6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>leadProfileScore6sense_Bynder__c</fullName>
    <description>A measure, between 0 and 100, of how similar the person is to your typical buyer or buying committee members. Demographic factors of a person record, along with historical opportunity history, are used by data science models to create this measure.</description>
    <label>6sense Lead Profile Score Bynder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>