metadata/force-app/main/default/objects/Lead/fields/leadUpdateDate6sense_Bynder__c.field-meta.xml
<CustomField>
    <fullName>leadUpdateDate6sense_Bynder__c</fullName>
    <description>The latest update date and time when 6sense Scores were updated.</description>
    <label>6sense Lead Update Date Bynder</label>
    <type>Date</type>
</CustomField>