metadata/force-app/main/default/objects/Lead/fields/LeanData__A2B_Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData__A2B_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A2B Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (A2B Account)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>