metadata/force-app/main/default/objects/Lead/fields/LeanData__A2B_Group__c.field-meta.xml
<CustomField>
    <fullName>LeanData__A2B_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A2B Group</label>
    <referenceTo>LeanData__A2B_Group__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>