metadata/force-app/main/default/objects/Lead/fields/LeanData__Has_Matched__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Has_Matched__c</fullName>
    <label>Has Matched</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>