metadata/force-app/main/default/objects/Lead/fields/LeanData__Marketing_Sys_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Marketing_Sys_Created_Date__c</fullName>
    <label>LeanData Marketing Sys Created Date</label>
    <type>DateTime</type>
</CustomField>