metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LeanData Matched Account (deprecated)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>LeanData Matched Leads</relationshipLabel>
    <relationshipName>Matched_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>