metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Annual_Revenue__c</fullName>
    <label>Matched Account Annual Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>