metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Billing_Postal_Code__c</fullName>
    <label>Matched Account Billing Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>