metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Billing_State__c</fullName>
    <label>Matched Account Billing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>