metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Custom_Field_1__c</fullName>
    <label>Matched Account Custom Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>