metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Employees__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Employees__c</fullName>
    <label>Matched Account Employees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>