metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Industry__c</fullName>
    <label>Matched Account Industry</label>
    <length>40</length>
    <type>Text</type>
</CustomField>