metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Name__c</fullName>
    <label>Matched Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>