metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Type__c</fullName>
    <label>Matched Account Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>