metadata/force-app/main/default/objects/Lead/fields/LeanData__Matched_Account_Website__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Matched_Account_Website__c</fullName>
    <label>Matched Account Website</label>
    <type>Url</type>
</CustomField>