metadata/force-app/main/default/objects/Lead/fields/LeanData__Salesforce_Id__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Salesforce_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LeanData Salesforce Id</label>
    <type>Text</type>
</CustomField>