metadata/force-app/main/default/objects/Lead/fields/LeanData_Matched_Account_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Matched_Account_Sales_Region__c</fullName>
    <label>Matched Account Sales Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>