metadata/force-app/main/default/objects/Lead/fields/Leandata_Ringlead__c.field-meta.xml
<CustomField>
    <fullName>Leandata_Ringlead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leandata Ringlead</label>
    <type>Checkbox</type>
</CustomField>