metadata/force-app/main/default/objects/Lead/fields/Marketing_Cloud_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BODEV-1290: Boolean field to indicate whether this record is synced to Marketing Cloud.</description>
    <inlineHelpText>If ticked, this record is in sync with Marketing Cloud.</inlineHelpText>
    <label>Marketing Cloud Sync</label>
    <type>Checkbox</type>
</CustomField>