metadata/force-app/main/default/objects/Lead/fields/Marketing_Region_NEW__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Region_NEW__c</fullName>
    <label>Marketing Region NEW (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Region</valueSetName>
    </valueSet>
</CustomField>