metadata/force-app/main/default/objects/Lead/fields/Matched_Account_Company_Size__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Company_Size__c</fullName>
    <label>Matched Account Company Size</label>
    <length>100</length>
    <type>Text</type>
</CustomField>