metadata/force-app/main/default/objects/Lead/fields/Matched_Account_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Country_of_Origin__c</fullName>
    <label>Matched Account Country of Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>