metadata/force-app/main/default/objects/Lead/fields/Matched_Account_free_to_be_prospected__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_free_to_be_prospected__c</fullName>
    <formula>IF(ISBLANK(LeanData__Reporting_Matched_Account__r.Account_free_to_be_prospected__c),
IMAGE(&quot;/servlet/servlet.FileDownload?file=0150P000005PRdt&quot;,&quot;YES&quot;),LeanData__Reporting_Matched_Account__r.Account_free_to_be_prospected__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matched Account free to be prospected</label>
    <type>Text</type>
</CustomField>