metadata/force-app/main/default/objects/Lead/fields/Matched_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Matched_Account_Owner__c</fullName>
    <description>BODEV-2496 New field on Lead level: Pull Account Owner &amp; BDR Owner of Matched Account</description>
    <formula>LeanData__Reporting_Matched_Account__r.Owner.FirstName +&quot; &quot;+ LeanData__Reporting_Matched_Account__r.Owner.LastName</formula>
    <label>Matched Account Owner</label>
    <type>Text</type>
</CustomField>