metadata/force-app/main/default/objects/Lead/fields/Matched_BDR_Owner__c.field-meta.xml
<CustomField>
    <fullName>Matched_BDR_Owner__c</fullName>
    <description>BODEV-2496 New field on Lead level: Pull Account Owner &amp; BDR Owner of Matched Account</description>
    <formula>LeanData__Reporting_Matched_Account__r.BDR_Owner__r.FirstName +&quot; &quot;+LeanData__Reporting_Matched_Account__r.BDR_Owner__r.LastName</formula>
    <label>Matched BDR Owner</label>
    <type>Text</type>
</CustomField>