metadata/force-app/main/default/objects/Lead/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>This is the field where messages are saved, for example the &apos;Message&apos; field in the support form</description>
    <inlineHelpText>This is the field where messages are saved, for example the &apos;Message&apos; field in the support form</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>