metadata/force-app/main/default/objects/Lead/fields/MK_Customer_Fit_Signals__c.field-meta.xml
<CustomField>
    <fullName>MK_Customer_Fit_Signals__c</fullName>
    <description>Reasons for the Customer Fit score
Signals can be changed on MadKudu&apos;s platform app.madkudu.com</description>
    <inlineHelpText>Reasons for the MK Customer Fit score
Signals can be changed on MadKudu&apos;s platform</inlineHelpText>
    <label>MK Customer Fit Signals</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>